tests/paczka1/fuzzy1/78528776.err
Error in line 10: Bhj1fLrZKce A268 64,99
Error in line 15: qcMwvV A268 30,37
Error in line 18: zNwpKA1Io A33 44,5
Error in line 22: zNwpKA1Io A908 57,9
Error in line 24: Bhj1fLrZKce A33 30,1
Error in line 28: qcMwvV A183 64,4
Error in line 34: qcMwvV A33 59,4
